style(expansion-panel): fix selectors and spacings

--- a/src/components/expansion-panel/themes/light/expansion-panel.base.scss
+++ b/src/components/expansion-panel/themes/light/expansion-panel.base.scss
@@ -1,6 +1,7 @@
 @use '../../../../styles/utilities/index' as *;
 
 $disabled-color: var(--disabled-color, color(gray, 500)) !default;
+$padding: calc(var(--igc-spacing-large) * 2) calc(var(--igc-spacing-large) * 3);
 
 :host {
     color: color(gray, 900);
@@ -14,7 +15,7 @@ $disabled-color: var(--disabled-color, color(gray, 500)) !default;
     display: flex;
     align-items: center;
     cursor: pointer;
-    padding: var(--igc-spacing-medium);
+    padding: $padding;
 
     &:focus,
     &:active {
@@ -32,14 +33,14 @@ $disabled-color: var(--disabled-color, color(gray, 500)) !default;
     }
 }
 
-[part='title']::slotted(*) {
+[part='title'] {
     @include type-category('h5');
     @include ellipsis();
 
     margin: 0;
 }
 
-[part='subtitle']::slotted(*) {
+[part='subtitle'] {
     @include type-category('subtitle-2');
     @include ellipsis();
 
@@ -50,6 +51,7 @@ $disabled-color: var(--disabled-color, color(gray, 500)) !default;
     @include type-category('body-2');
 
     overflow: hidden;
+    padding: $padding;
 }
 
 [part~='indicator'] {
